Clarify advertisement data collection in privacy policy

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -92,6 +92,7 @@
         <li>The App does not request access to your location.</li>
         <li>The App does not collect your name, email, phone number, or any identifiable information.</li>
         <li>The App does not use analytics, tracking tools, or third-party SDKs that gather data.</li>
+        <li>The App does display advertisements via Google AdMob, but this does not involve collecting personal data.</li>
       </ul>
 
       <h2>Third Party Access</h2>
