Revise MediaSort app description for clarity
Updated description to enhance clarity and conciseness.

--- a/index.html
+++ b/index.html
@@ -75,10 +75,9 @@
     <div class="card">
       <h1>MediaSort</h1>
       <p>
-        MediaSort is a simple and intuitive app designed to help users declutter 
-        and organize their photos and videos. It automatically sorts media files 
-        into neatly structured folders by year and month, making it easier to 
-        manage your memories.
+        MediaSort helps users effortlessly organize their photos and videos. 
+        It automatically sorts media files into neatly structured folders by
+        year and month, making it easier to manage their memories.
       </p>
 
       <ul>
